Tried fixing errors for the routes
