# project-2/src/routes/swaggerRoute.js
@@ -1,0 +1,9 @@
+const router = require("express").Router();
+const swaggerUi = require("swagger-ui-express");
+
+const swaggerDocument = require("../utils/swagger.json"); 
+
+router.use("/api-docs", swaggerUi.serve);
+router.get("/api-docs", swaggerUi.setup(swaggerDocument));
+
+module.exports = router;
